--- a/src/app/shared/component/input-file/input-file.component.html
+++ b/src/app/shared/component/input-file/input-file.component.html
@@ -6,7 +6,7 @@
     #fileUpload
   /> -->
 
-  <label class="btn btn-hipster" for="files">Select Avatar</label>
+  <label class="btn btn-hipster" for="files">Select {{ label }}</label>
   <label for="">{{ fileName }}</label>
   <input
     type="file"
