--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -3,7 +3,7 @@
     [employee]="employee"
     [ranks]="ranks"
     [departments]="departments"
-    (employeeSubmit)="onEmployeeSubmit($event)"
+    (employeePost)="onEmployeePost($event)"
   ></app-employee-form>
   <div modalFooter></div>
 </app-modal>
