--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -14,6 +14,10 @@
           [src]="'data:image/png;base64,' + employee.avatar"
           alt="Generic placeholder image"
           class="employee-img"
+          [ngClass]="{
+            'active-item': !employee.isRetired,
+            'down-item': employee.isRetired
+          }"
         />
         <div>
           <h5 class="name mb-1">{{ employee.fullName }}</h5>
