--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -9,7 +9,11 @@
   <div modalFooter></div>
 </app-modal>
 
-<app-search (create)="onCreate()" (search)="search($event)"></app-search>
+<app-search
+  title="Search in active employees"
+  (create)="onCreate()"
+  (search)="search($event)"
+></app-search>
 
 <div class="employee-list" [ngClass]="{ 'no-element': notFound }">
   <ng-container *ngIf="!notFound && !isLoading; else elseNotFoundOrLoading">
