--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -21,6 +21,7 @@
       *ngFor="let employee of employees"
       [employee]="employee"
       (edit)="onEdit($event)"
+      (upDown)="onUpDown($event)"
     ></app-employee>
   </ng-container>
   <ng-template #elseNotFoundOrLoading>
