--- a/src/app/modules/hr/pages/employee/employee/employee.component.html
+++ b/src/app/modules/hr/pages/employee/employee/employee.component.html
@@ -3,7 +3,7 @@
     <button type="button" class="item-icon" (click)="onEdit()">
       <i class="fas fa-pen"></i>
     </button>
-    <button class="item-icon bg-danger">
+    <button class="item-icon bg-danger" (click)="onUpDown()">
       <i class="fas fa-arrow-down"></i>
     </button>
   </div>
