routing for employee up and down

--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.html
@@ -10,7 +10,9 @@
 </app-modal>
 
 <app-search
-  title="Search in active employees"
+  [title]="
+    isRetired ? 'Search for Retired Employees' : 'Search for Active Employees'
+  "
   (create)="onCreate()"
   (search)="search($event)"
 ></app-search>
