add cards to card selection in form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-navbar (toggleMenu)="toggleMenu()"></app-navbar>
+<app-navbar></app-navbar>
 <div class="main-container">
-  <app-menu [showMenu]="showMenu" (close)="showMenu = !showMenu"></app-menu>
+  <app-menu></app-menu>
   <div class="section-center">
     <router-outlet></router-outlet>
   </div>
