--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -6,7 +6,12 @@
     [placeholder]="title"
     (input)="onSearch($any($event.target).value)"
   />
-  <button (click)="onCreate()" type="button" class="btn add-new-btn">
+  <button
+    *ngIf="hasAddNew"
+    (click)="onCreate()"
+    type="button"
+    class="btn add-new-btn"
+  >
     <i class="fas fa-plus"></i> add new
   </button>
 </form>
