--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
     <router-outlet></router-outlet>
   </div>
   <app-notification-list></app-notification-list>
+  <app-confirmation></app-confirmation>
 </div>
