--- a/src/app/modules/hr/pages/department/department-list/department-list.component.html
+++ b/src/app/modules/hr/pages/department/department-list/department-list.component.html
@@ -3,82 +3,65 @@
 </div>
 <app-search></app-search>
 
-<div class="departments">
-  <table class="table table-responsive align-middle mb-0 bg-white">
-    <thead class="bg-light">
-      <tr>
-        <th>Department Name</th>
-        <th>Type</th>
-        <th>Parent Department</th>
-        <th>City</th>
-        <th>Manager</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td data-title="Name">Human Resources</td>
-        <td data-title="Type">
-          <span class="badge bg-success">Central</span>
-        </td>
-        <td data-title="Parent">Clean Corporation</td>
-        <td data-title="City">Rabat</td>
-        <td data-title="Manager">
-          <div class="d-flex department-manager">
-            <img
-              src="https://mdbootstrap.com/img/new/avatars/8.jpg"
-              alt=""
-              style="width: 45px; height: 45px"
-              class="rounded-circle"
-            />
-            <div class="ms-3">
-              <p class="fw-bold mb-1">John Doe</p>
+<div class="departments" [ngClass]="{ 'no-element': notFound || isLoading }">
+  <ng-container *ngIf="!notFound && !isLoading; else elseNotFoundOrLoading">
+    <table class="table table-responsive align-middle mb-0 bg-white">
+      <thead class="bg-light">
+        <tr>
+          <th>Department Name</th>
+          <th>Type</th>
+          <th>Parent Department</th>
+          <th>City</th>
+          <th>Manager</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let department of departments">
+          <td data-title="Name">{{ department.name }}</td>
+          <td data-title="Type">
+            <span class="badge bg-success">{{
+              department.departmentType.name
+            }}</span>
+          </td>
+          <td data-title="Parent">{{ department.parent?.name }}</td>
+          <td data-title="City">{{ department.city.name }}</td>
+          <td data-title="Manager" class="d-flex justify-content-between">
+            <div class="d-flex align-items-center">
+              <img
+                [src]="'data:image/png;base64,' + department.manager.avatar"
+                alt=""
+                style="width: 45px; height: 45px"
+                class="rounded-circle"
+              />
+              <div class="ms-3">
+                <p class="fw-bold mb-1">{{ department.manager.fullName }}</p>
+              </div>
             </div>
-          </div>
-        </td>
-        <td>
-          <div class="btn-container">
-            <button type="button" class="btn btn-hipster text-warning">
-              <i class="fas fa-pen"></i>
-            </button>
-            <button type="button" class="btn btn-hipster text-danger">
-              <i class="fas fa-arrow-circle-up"></i>
-            </button>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td data-title="Name">Human Resources</td>
-        <td data-title="Type">
-          <span class="badge bg-success">Central</span>
-        </td>
-        <td data-title="Parent">Clean Corporation</td>
-        <td data-title="City">Rabat</td>
-        <td data-title="Manager">
-          <div class="d-flex department-manager">
-            <img
-              src="https://mdbootstrap.com/img/new/avatars/8.jpg"
-              alt=""
-              style="width: 45px; height: 45px"
-              class="rounded-circle"
-            />
-            <div class="ms-3">
-              <p class="fw-bold mb-1">John Doe</p>
+          </td>
+          <td>
+            <div class="btn-container">
+              <button type="button" class="btn btn-hipster text-warning">
+                <i class="fas fa-pen"></i>
+              </button>
+              <button type="button" class="btn btn-hipster text-danger">
+                <i class="fas fa-arrow-circle-up"></i>
+              </button>
             </div>
-          </div>
-        </td>
-        <td>
-          <div class="btn-container">
-            <button type="button" class="btn btn-hipster text-warning">
-              <i class="fas fa-pen"></i>
-            </button>
-            <button type="button" class="btn btn-hipster text-danger">
-              <i class="fas fa-arrow-circle-up"></i>
-            </button>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </ng-container>
+  <ng-template #elseNotFoundOrLoading>
+    <tr>
+      <app-spinner *ngIf="isLoading"></app-spinner>
+      <app-not-found
+        *ngIf="notFound && !isLoading"
+        message="sorry no department was found"
+      ></app-not-found>
+    </tr>
+  </ng-template>
 </div>
 <app-pagination [numberOfPages]="{ value: 10 }"></app-pagination>
