--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -11,6 +11,7 @@
     (click)="onCreate()"
     type="button"
     class="btn add-new-btn"
+    [ngClass]="btnColor"
   >
     <i class="fas fa-plus"></i> add new
   </button>
