--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -220,6 +220,14 @@ img:not(.logo) {
   background: var(--grey-500);
 }
 
+.primary {
+  background: var(--primary-500);
+}
+
+.secondary {
+  background: var(--grey-400);
+}
+
 /* alerts */
 /* .alert {
   padding: 0.375rem 0.75rem; 
@@ -965,12 +973,13 @@ Not Found
   display: grid;
   place-items: center;
   width: 100%;
-  height: calc(100vh - var(--navbar-thick));
+  height: 100%;
+  /* height: calc(100vh - var(--navbar-thick)); */
 }
 
 @media screen and (min-width: 768px) {
   .not-found {
-    height: calc(100vh - var(--navbar-thin));
+    /* height: calc(100vh - var(--navbar-thin)); */
   }
 }
 
@@ -1202,6 +1211,7 @@ Employee Form
 Department List
 ===============
 */
+
 tbody {
   width: 100%;
 }
@@ -1232,9 +1242,9 @@ table tr {
   padding: 0.45rem;
 }
 
-thead tr {
+/* thead tr {
   background-color: var(--primary-400);
-}
+} */
 
 thead th {
   color: var(--white);
