--- a/src/app/modules/hr/pages/department/department-form/department-form.component.html
+++ b/src/app/modules/hr/pages/department/department-form/department-form.component.html
@@ -4,7 +4,7 @@
   <app-input
     inputType="text"
     label="Name"
-    [control]="getControl('Name')"
+    [control]="getControl('name')"
   ></app-input>
   <app-input
     inputType="text"
@@ -12,7 +12,7 @@
     [control]="getControl('shortName')"
   ></app-input>
   <app-select
-    [options]="managers"
+    [options]="departmentTypes"
     label="Department Type"
     [control]="getControl('departmentTypeId')"
   ></app-select>
