--- a/src/app/modules/hr/pages/employee/employee-list/employee-list.component.css
+++ b/src/app/modules/hr/pages/employee/employee-list/employee-list.component.css
@@ -1,6 +1,6 @@
 :host {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto auto 1fr auto;
   height: calc(100vh - var(--navbar-thick));
   padding: 0 0.5rem;
 }
